add jacoco plugin, upgrade spring version